@@ -5,7 +5,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -17,9 +16,11 @@ import org.springframework.data.mongodb.core.aggregation.ArithmeticOperators;
 import org.springframework.data.mongodb.core.aggregation.ConvertOperators;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.server.ResponseStatusException;
 
 import com.example.orderservice.dto.CartDTO;
 import com.example.orderservice.dto.CheckoutRequest;
@@ -44,27 +45,44 @@ public class OrderService {
     private final MongoTemplate mongoTemplate;
     private final OrderProducer orderProducer;
 
+    private static final String USER_ID_FIELD = "userId";
+    private static final String STATUS_FIELD = "status";
+    private static final String TOTAL_SPENT_FIELD = "totalSpent";
+    private static final String TOTAL_ORDERS_FIELD = "totalOrders";
+    private static final String ITEMS_FIELD = "items";
+    private static final String PRODUCT_NAME_FIELD = "productName";
+    private static final String ITEMS_PRODUCT_NAME_FIELD = "items.productName";
+    private static final String ITEMS_QUANTITY_FIELD = "items.quantity";
+    private static final String COUNT_FIELD = "count";
+    private static final String TOTAL_REVENUE_FIELD = "totalRevenue";
+    private static final String COMPLETED_ORDERS_FIELD = "completedOrders";
+    private static final String ERROR_NOT_FOUND = "Commande non trouvée";
+    private static final String ERROR_DENIED = "Accès refusé";
+    private static final String ITEMS_PRODUCT_ID_FIELD = "items.productId";
+    private static final String PRODUCT_ID_FIELD = "productId";
+    private static final String ITEMS_SELLER_ID_FIELD = "items.sellerId";
+
     public UserStatsDTO getUserStats(String userId) {
         try {
             Aggregation baseAgg = Aggregation.newAggregation(
-                    Aggregation.match(Criteria.where("userId").is(userId).and("status").ne(OrderStatus.CANCELLED.name())),
+                    Aggregation.match(Criteria.where(USER_ID_FIELD).is(userId).and(STATUS_FIELD).ne(OrderStatus.CANCELLED.name())),
                     Aggregation.project()
                             .and(ConvertOperators.ToDouble.toDouble("$totalAmount")).as("numericAmount"),
                     Aggregation.group()
-                            .sum("numericAmount").as("totalSpent")
-                            .count().as("totalOrders")
+                            .sum("numericAmount").as(TOTAL_SPENT_FIELD)
+                            .count().as(TOTAL_ORDERS_FIELD)
             );
 
-            Map baseResults = mongoTemplate.aggregate(baseAgg, Order.class, Map.class).getUniqueMappedResult();
+            Map<String, Object> baseResults = mongoTemplate.aggregate(baseAgg, Order.class, org.bson.Document.class).getUniqueMappedResult();
 
             Aggregation productsAgg = Aggregation.newAggregation(
-                    Aggregation.match(Criteria.where("userId").is(userId).and("status").ne(OrderStatus.CANCELLED.name())),
-                    Aggregation.unwind("items"),
-                    Aggregation.group("items.productId")
-                            .first("items.productName").as("productName")
-                            .sum("items.quantity").as("count"),
-                    Aggregation.project("productName", "count").and("_id").as("productId"),
-                    Aggregation.sort(Sort.Direction.DESC, "count"),
+                    Aggregation.match(Criteria.where(USER_ID_FIELD).is(userId).and(STATUS_FIELD).ne(OrderStatus.CANCELLED.name())),
+                    Aggregation.unwind(ITEMS_FIELD),
+                    Aggregation.group(ITEMS_PRODUCT_ID_FIELD)
+                            .first(ITEMS_PRODUCT_NAME_FIELD).as(PRODUCT_NAME_FIELD)
+                            .sum(ITEMS_QUANTITY_FIELD).as(COUNT_FIELD),
+                    Aggregation.project(PRODUCT_NAME_FIELD, COUNT_FIELD).and("_id").as(PRODUCT_ID_FIELD),
+                    Aggregation.sort(Sort.Direction.DESC, COUNT_FIELD),
                     Aggregation.limit(5)
             );
 
@@ -74,8 +92,8 @@ public class OrderService {
             long orders = 0;
 
             if (baseResults != null) {
-                spent = baseResults.get("totalSpent") != null ? Double.parseDouble(baseResults.get("totalSpent").toString()) : 0;
-                orders = baseResults.get("totalOrders") != null ? Long.parseLong(baseResults.get("totalOrders").toString()) : 0;
+                spent = baseResults.get(TOTAL_SPENT_FIELD) != null ? Double.parseDouble(baseResults.get(TOTAL_SPENT_FIELD).toString()) : 0;
+                orders = baseResults.get(TOTAL_ORDERS_FIELD) != null ? Long.parseLong(baseResults.get(TOTAL_ORDERS_FIELD).toString()) : 0;
             }
 
             return UserStatsDTO.builder()
@@ -83,7 +101,7 @@ public class OrderService {
                     .totalOrders(orders)
                     .topProducts(topProducts != null ? topProducts : new ArrayList<>())
                     .build();
-        } catch (Exception e) {
+        } catch (org.springframework.dao.DataAccessException e) {
             log.error("Error user stats: {}", e.getMessage());
             return UserStatsDTO.builder().totalSpent(BigDecimal.ZERO).totalOrders(0).topProducts(new ArrayList<>()).build();
         }
@@ -92,27 +110,28 @@ public class OrderService {
     public SellerStatsDTO getSellerStats(String sellerId) {
         try {
             Aggregation revenueAgg = Aggregation.newAggregation(
-                    Aggregation.unwind("items"),
-                    Aggregation.match(Criteria.where("items.sellerId").is(sellerId).and("status").is(OrderStatus.DELIVERED.name())),
-                    Aggregation.project("items.quantity")
+                    Aggregation.unwind(ITEMS_FIELD),
+                    Aggregation.match(Criteria.where(ITEMS_SELLER_ID_FIELD).is(sellerId).and(STATUS_FIELD).is(OrderStatus.DELIVERED.name())),
+                    Aggregation.project(ITEMS_QUANTITY_FIELD)
                             .and(ConvertOperators.ToDouble.toDouble("$items.priceAtPurchase")).as("unitPrice"),
                     Aggregation.project()
                             .and(ArithmeticOperators.Multiply.valueOf("unitPrice").multiplyBy("quantity")).as("lineRevenue"),
                     Aggregation.group()
-                            .sum("lineRevenue").as("totalRevenue")
-                            .count().as("completedOrders")
+                            .sum("lineRevenue").as(TOTAL_REVENUE_FIELD)
+                            .count().as(COMPLETED_ORDERS_FIELD)
             );
 
-            Map revenueResults = mongoTemplate.aggregate(revenueAgg, Order.class, Map.class).getUniqueMappedResult();
+            @SuppressWarnings("unchecked")
+            Map<String, Object> revenueResults = mongoTemplate.aggregate(revenueAgg, Order.class, Map.class).getUniqueMappedResult();
 
             Aggregation bestSellersAgg = Aggregation.newAggregation(
-                    Aggregation.unwind("items"),
-                    Aggregation.match(Criteria.where("items.sellerId").is(sellerId).and("status").ne(OrderStatus.CANCELLED.name())),
-                    Aggregation.group("items.productId")
-                            .first("items.productName").as("productName")
-                            .sum("items.quantity").as("count"),
-                    Aggregation.project("productName", "count").and("_id").as("productId"),
-                    Aggregation.sort(Sort.Direction.DESC, "count"),
+                    Aggregation.unwind(ITEMS_FIELD),
+                    Aggregation.match(Criteria.where(ITEMS_SELLER_ID_FIELD).is(sellerId).and(STATUS_FIELD).ne(OrderStatus.CANCELLED.name())),
+                    Aggregation.group(ITEMS_PRODUCT_ID_FIELD)
+                            .first(ITEMS_PRODUCT_NAME_FIELD).as(PRODUCT_NAME_FIELD)
+                            .sum(ITEMS_QUANTITY_FIELD).as(COUNT_FIELD),
+                    Aggregation.project(PRODUCT_NAME_FIELD, COUNT_FIELD).and("_id").as(PRODUCT_ID_FIELD),
+                    Aggregation.sort(Sort.Direction.DESC, COUNT_FIELD),
                     Aggregation.limit(5)
             );
 
@@ -122,8 +141,8 @@ public class OrderService {
             long sales = 0;
 
             if (revenueResults != null) {
-                rev = revenueResults.get("totalRevenue") != null ? Double.parseDouble(revenueResults.get("totalRevenue").toString()) : 0;
-                sales = revenueResults.get("completedOrders") != null ? Long.parseLong(revenueResults.get("completedOrders").toString()) : 0;
+                rev = revenueResults.get(TOTAL_REVENUE_FIELD) != null ? Double.parseDouble(revenueResults.get(TOTAL_REVENUE_FIELD).toString()) : 0;
+                sales = revenueResults.get(COMPLETED_ORDERS_FIELD) != null ? Long.parseLong(revenueResults.get(COMPLETED_ORDERS_FIELD).toString()) : 0;
             }
 
             return SellerStatsDTO.builder()
@@ -131,7 +150,7 @@ public class OrderService {
                     .completedOrders(sales)
                     .bestSellers(bestSellers != null ? bestSellers : new ArrayList<>())
                     .build();
-        } catch (Exception e) {
+        } catch (org.springframework.dao.DataAccessException e) {
             log.error("Error seller stats: {}", e.getMessage());
             return SellerStatsDTO.builder().totalRevenue(BigDecimal.ZERO).completedOrders(0).bestSellers(new ArrayList<>()).build();
         }
@@ -143,23 +162,23 @@ public class OrderService {
         List<Criteria> criteriaList = new ArrayList<>();
 
         if (userId != null) {
-            criteriaList.add(Criteria.where("userId").is(userId));
+            criteriaList.add(Criteria.where(USER_ID_FIELD).is(userId));
         }
         if (sellerId != null) {
-            criteriaList.add(Criteria.where("items.sellerId").is(sellerId));
+            criteriaList.add(Criteria.where(ITEMS_SELLER_ID_FIELD).is(sellerId));
         }
         if (status != null) {
-            criteriaList.add(Criteria.where("status").is(status));
+            criteriaList.add(Criteria.where(STATUS_FIELD).is(status));
         }
         if (start != null && end != null) {
             criteriaList.add(Criteria.where("createdAt").gte(start).lte(end));
         }
         if (keyword != null) {
-            criteriaList.add(Criteria.where("items.productName").regex(java.util.regex.Pattern.quote(keyword), "i"));
+            criteriaList.add(Criteria.where(ITEMS_PRODUCT_NAME_FIELD).regex(java.util.regex.Pattern.quote(keyword), "i"));
         }
 
         if (!criteriaList.isEmpty()) {
-            query.addCriteria(new Criteria().andOperator(criteriaList.toArray(new Criteria[0])));
+            query.addCriteria(new Criteria().andOperator(criteriaList.toArray(Criteria[]::new)));
         }
 
         long count = mongoTemplate.count(query, Order.class);
@@ -170,14 +189,14 @@ public class OrderService {
 
     public Order cancelOrder(String userId, String orderId) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Commande non trouvée"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_NOT_FOUND));
 
         if (!order.getUserId().equals(userId)) {
-            throw new RuntimeException("Accès refusé");
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ERROR_DENIED);
         }
 
         if (order.getStatus() != OrderStatus.PENDING) {
-            throw new RuntimeException("Seules les commandes en attente peuvent être annulées");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Seules les commandes en attente peuvent être annulées");
         }
 
         order.setStatus(OrderStatus.CANCELLED);
@@ -187,14 +206,14 @@ public class OrderService {
 
     public void deleteOrder(String userId, String orderId) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Commande non trouvée"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_NOT_FOUND));
 
         if (!order.getUserId().equals(userId)) {
-            throw new RuntimeException("Accès refusé");
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ERROR_DENIED);
         }
 
         if (order.getStatus() != OrderStatus.DELIVERED && order.getStatus() != OrderStatus.CANCELLED) {
-            throw new RuntimeException("Impossible de supprimer une commande active");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Impossible de supprimer une commande active");
         }
 
         orderRepository.deleteById(orderId);
@@ -202,13 +221,13 @@ public class OrderService {
 
     public Order updateOrderStatus(String sellerId, String orderId, OrderStatus newStatus) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Commande non trouvée"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_NOT_FOUND));
 
         boolean isSellerOfOrder = order.getItems().stream()
                 .anyMatch(item -> item.getSellerId().equals(sellerId));
 
         if (!isSellerOfOrder) {
-            throw new RuntimeException("Accès refusé");
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ERROR_DENIED);
         }
 
         if (order.getStatus() == OrderStatus.PENDING && newStatus == OrderStatus.PAID) {
@@ -225,10 +244,10 @@ public class OrderService {
     @Transactional
     public Order redoOrder(String userId, String orderId, String token) {
         Order oldOrder = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Commande non trouvée"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_NOT_FOUND));
 
         if (!oldOrder.getUserId().equals(userId)) {
-            throw new RuntimeException("Accès refusé");
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, ERROR_DENIED);
         }
 
         Order newOrder = Order.builder()
@@ -250,7 +269,7 @@ public class OrderService {
         CartDTO cart = fetchCart(token);
 
         if (cart.getItems() == null || cart.getItems().isEmpty()) {
-            throw new RuntimeException("Le panier est vide");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le panier est vide");
         }
 
         BigDecimal totalAmount = cart.getItems().stream()
@@ -265,7 +284,7 @@ public class OrderService {
                 .quantity(item.getQuantity())
                 .sellerId(item.getSellerId())
                 .build())
-                .collect(Collectors.toList());
+                .toList();
 
         Order order = Order.builder()
                 .userId(userId)
@@ -281,7 +300,7 @@ public class OrderService {
         Order savedOrder = orderRepository.save(order);
         try {
             clearCart(token);
-        } catch (Exception e) {
+        } catch (org.springframework.web.reactive.function.client.WebClientException e) {
             log.warn("Commande {} créée mais échec du vidage du panier", savedOrder.getId(), e);
         }
         return savedOrder;
